# rgbmaker_miniproject

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
src/rgbc/: __init__.py  cli.py
src/rgbc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
